# tele-agent-bus

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/agent-bus/: Cargo.toml
crates/agent-bus-core/: Cargo.toml
crates/agent-bus-core/src/: approval_gate.rs  auth_context.rs  blacklist.rs  blacklist_integrity.rs  classifier.rs  config.rs  jsonl_scan.rs  lib.rs  path_validate.rs  peer_uid.rs  redact.rs  repo_id.rs  state.rs  token_expiry.rs
crates/agent-bus-hook/: Cargo.toml
crates/agent-bus-hook/src/: main.rs
crates/agent-bus-proto/: Cargo.toml
crates/agent-bus-proto/src/: lib.rs
crates/agent-bus/src/: main.rs
crates/agent-bus/src/cli/: approval_gate.rs  auth.rs  blacklist.rs  config.rs  init.rs  mod.rs  repo.rs
crates/agent-bus/src/daemon/: auth_cmds.rs  claude_headless.rs  cli_spawner.rs  codex_app_server.rs  codex_ipc.rs  context_lock.rs  inbox.rs  mobile_session.rs  mobile_transcript.rs  mod.rs  perm.rs  routing.rs  runner.rs  runner_cli_tests.rs  session_bridge.rs  telegram.rs  uds.rs
crates/agent-bus/tests/: cli_tests.rs
crates/agent-bus/tests/fixtures/fake-cli/: README.md  claude_auth_expired.sh  claude_ok.sh  claude_quota.sh  claude_rate_limit.sh  codex_auth_expired.sh  codex_ok.sh
docs/: per-repo-approval-gate.md  per-repo-blacklist.md  setup-telegram.md  setup-windows.md
scripts/: agent-bus.service  codex-session-repair.py  install.sh  setup-profiles.sh  uninstall.sh
