[package]
name = "agent-bus-core"
description = "Shared non-wire logic: config, state actor, blacklist, redaction, path validation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-bus-proto = { path = "../agent-bus-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
