[package]
name = "agent-bus"
description = "Daemon + CLI entry point. Orchestrates state and Telegram."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-bus-core = { path = "../agent-bus-core" }
agent-bus-proto = { path = "../agent-bus-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
teloxide = { workspace = true }
regex = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
