[package]
name = "agent-bus"
description = "tele-agent-bus daemon + CLI. Multi-agent orchestration over Telegram."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent-bus"
path = "src/main.rs"

[dependencies]
tabled = { workspace = true }
agent-bus-proto = { path = "../agent-bus-proto" }
agent-bus-core = { path = "../agent-bus-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml.workspace = true
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
teloxide = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
base64 = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }
shellexpand = "3.1.2"
fs2 = "0.4"

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
mockall = { workspace = true }
filetime = "0.2"
